data/derived/fa15/progs/unify/prog1587.ml.out
Characters 18-25:
  let _ = fixpoint (collatz, 107);;
                    ^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type
         (('a -> 'b) -> ('a -> 'b) * bool) * ('a -> 'b)
